# grancalculadora

./: .gitignore  COPYING  INSTALL.md  Makefile.am  README.md  aclocal.m4  configure.ac
src/: colors.h  display.cc  display.h  eval.cc  eval.h  main.cc  parser.cc  parser.h  window.cc  window.h
src/.deps/: gran_calculadora-display.Po  gran_calculadora-eval.Po  gran_calculadora-latex_display.Po  gran_calculadora-lexer.Po  gran_calculadora-main.Po  gran_calculadora-parser.Po  gran_calculadora-window.Po
